added authentication and registration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,8 @@ spring.datasource.password=root
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+jwt.secret=egor1kiril2egor3kiril4egor5kiril6egor7kiril8
+jwt.expiration=2000000
+
+
