added registration for admin and methods for add and delete products

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,4 @@ spring.jpa.show-sql=true
 jwt.secret=egor1kiril2egor3kiril4egor5kiril6egor7kiril8
 jwt.expiration=2000000
 
-
+logging.level.org.springframework.security=DEBUG
