--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 jwt.secret=egor1kiril2egor3kiril4egor5kiril6egor7kiril8
-jwt.expiration=10000
+jwt.expiration=1000000
 
 logging.level.org.springframework.security=DEBUG
