--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,12 @@ jwt.secret=egor1kiril2egor3kiril4egor5kiril6egor7kiril8
 jwt.expiration=1000000
 
 logging.level.org.springframework.security=DEBUG
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=iopjkl852@gmail.com
+spring.mail.password=idpphdemtsfmllmf
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
