fixed bugs and added getOrders

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/shop_database
 spring.datasource.username=postgres
 spring.datasource.password=root
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 jwt.secret=egor1kiril2egor3kiril4egor5kiril6egor7kiril8
